rest: delete item route
