# src/swagger.yml
@@ -352,6 +352,43 @@ paths:
             $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
+    delete:
+      tags:
+      - order
+      summary: deletes an item from order
+      description: Removes a single item from order and update item quantities
+      operationId: delete_item
+      produces:
+      - application/json
+      parameters:
+      - name: order
+        in: path
+        description: ID of the order where the item is located at
+        required: true
+        type: string
+      - name: body
+        in: body
+        schema:
+          $ref: '#/definitions/UpdatingItem'
+      responses:
+        200:
+          description: item removed and the updated order will be returned with items
+          schema:
+            $ref: '#/definitions/Order'
+        404:
+          description: item not found to be added
+          schema:
+            $ref: '#/definitions/ItemNotFoundError'
+        403:
+          description: access token not provided
+          schema:
+            $ref: '#/definitions/AccessTokenMissing'
+        500:
+          description: invalid token provided
+          schema:
+            $ref: '#/definitions/InvalidToken'
+      security:
+      - api_key: []
   /order/items/{order}:
     put:
       tags:
@@ -468,7 +505,7 @@ paths:
       parameters:
       - name: order
         in: path
-        description: ID of the order needs to be updated 
+        description: ID of the order that needs to be updated 
         required: true
         type: string
       - name: body
@@ -498,73 +535,38 @@ paths:
             $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
-      
-    put:
-      tags:
-      - order
-      summary: removes a single item from order
-      description: Removes a single order from the current order
-      operationId: removeItemsInOrder
-      produces:
-      - application/json
-      parameters:
-      - name: order
-        in: path
-        description: ID of the order needs to be updated 
-        required: true
-        type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            $ref: '#/definitions/Order'
-      security:
-      - api_key: []
+  /order/checkout/{order}:
     post:
       tags:
       - order
-      summary: updates an order
-      description: Updates an order in database
-      operationId: updateItemsInOrder
+      summary: checks out an order
+      description: Checks out an order by deleting it from collection and keeping item quantities intact
+      operationId: check_out_order
       produces:
       - application/json
       parameters:
       - name: order
         in: path
-        description: ID of the order needs to be updated 
+        description: ID of the order that needs to be checked out
         required: true
         type: string
-      - name: body
-        in: body
-        schema:
-          $ref: '#/definitions/UpdatingItem'
       responses:
         200:
-          description: successful operation
+          description: order checked out successfully
           schema:
             $ref: '#/definitions/Order'
-      security:
-      - api_key: []
-  /orders:
-    get:
-      tags:
-      - order
-      summary: returns a list of orders
-      description: Returns a list of orders related to a user
-      operationId: getUserOrders
-      parameters:
-      - name: user
-        in: header
-        description: User in context 
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        200:
-          description: successful operation
+        404:
+          description: order doesn't exist
           schema:
-           $ref: '#/definitions/Order'
+            $ref: '#/definitions/OrderNotFoundError'
+        403:
+          description: access token not provided
+          schema:
+            $ref: '#/definitions/AccessTokenMissing'
+        500:
+          description: invalid token provided
+          schema:
+            $ref: '#/definitions/InvalidToken'
       security:
       - api_key: []
   
